--- a/src/css/Container.css
+++ b/src/css/Container.css
@@ -75,3 +75,15 @@
     height: 40rem;
 }
 
+.popup-content{
+    color: var(--text-color);
+}
+
+.popup-content-heading{
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+    margin: 1rem 0;
+    padding-bottom: 1rem;
+}
+
