--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     align-items: center;
     height: 10vh;
-    background-color: #000;
+    background-color: var(--secondary-accent-color);
     color: white;
     padding: 10rem 0rem;
 }
